--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,9 @@
+html, body, header, section, footer{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body{
     width: 100%;
     height: 100%;
@@ -7,7 +13,12 @@ body{
 
 figure#ts3{
     width: 10%;
-    margin: 0 auto;
+    margin: 15% auto;
 
     text-align: center;
+}
+
+
+figure#ts3 img{
+    width: 100%;
 }
