--- a/css/default.css
+++ b/css/default.css
@@ -1,24 +1,81 @@
-html, body, header, section, footer{
+html, body, header, nav, section, aside, footer{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
-    width: 100%;
-    height: 100%;
+h1, h2, h3, p{
+    margin: 0;
+    padding: 0;
 
-    background: url("../res/img/patt0.jpg");
+    color: #FFF;
 }
 
-figure#ts3{
-    width: 10%;
-    margin: 15% auto;
+html, body{
+    width: 100%;
+    min-width: 800px;
+    height: 100%;
+    min-height: 600px;
+}
 
+body{
+    background: url("../res/img/bg1.jpg");
+    background-size: cover;
     text-align: center;
 }
 
+header{
+    background: rgba(80,180,100,0.5);
+    height: 45%;
 
-figure#ts3 img{
-    width: 100%;
+    padding-top: 150px;
+
+}
+
+section{
+    background: rgba(180,80,100,0.5);
+    height: 45%;
+}
+
+footer{
+    background: rgba(100,180,80,0.5);
+    height: 10%;
+}
+
+
+
+h1{
+    font-size: 4em;
+    font-family: Aldrich, Arial;
+}
+
+h2{
+    font-size: 3em;
+    font-family: Caveat, Arial;
+}
+
+h3{
+    font-size: 2em;
+    font-family: Helvetica, Arial;
+}
+
+section div#social{
+    margin: 0 auto;
+    text-align: center;
+}
+
+img{
+    width: 5%;
+}
+
+
+/********************************************************** FONTS *****************************************************/
+@font-face {
+    font-family: Aldrich;
+    src: url("../res/font/Aldrich-Regular.ttf");
+}
+
+@font-face {
+    font-family: Caveat;
+    src: url("../res/font/Caveat-Regular.ttf");
 }
