--- a/css/default.css
+++ b/css/default.css
@@ -24,22 +24,22 @@ html{
 }
 
 body{
-    background: url("../res/img/bg1.jpg");
+    background: url("../res/img/bg3.jpg") center;
     background-size: cover;
     text-align: center;
 }
 
 header{
     /*background: rgba(80,180,100,0.5);*/
-    height: 45%;
-
-    padding-top: 150px;
+    height: 40%;
+    padding-top: 7%;
 
 }
 
 section{
     /*background: rgba(180,80,100,0.5);*/
-    height: 45%;
+    height: 50%;
+    padding: 8%;
 }
 
 footer{
@@ -50,12 +50,13 @@ footer{
 /*********************************************************************************************************************/
 
 h1{
-    width: 50%;
     margin: 0 auto;
-    font-size: 4em;
+    font-size: 3.5em;
     font-family: Aldrich, Arial;
     text-shadow: 0 0 5px #FF0000;
     transition: 1s;
+
+    display: inline-block;
 
     cursor: default;
 }
@@ -68,27 +69,30 @@ h2{
 }
 
 h3{
-    font-size: 2em;
-    font-family: Helvetica, Arial;
+    font-size: 1.5em;
+    font-family: Caveat, Arial;
     text-shadow: 0 0 5px #0000FF;
 }
 
 section div{
     /*background: rgba(100,150,200, 0.5);*/
     height: 30%;
-    margin: 20px 0px 40px 0px;
+    width: 60%;
+    min-width: 600px;
+    margin: 20px auto 40px auto;
 }
 
 section div figure{
     height: 100%;
-    width: 100px;
+    width: 10%;
     margin: 0 0.5%;
 
     display: inline-block;
 }
 
 section div figure img{
-    height: 60%;
+    height: 100%;
+    box-shadow: 0 0 5px #00FF00;
 }
 
 section div figure figcaption{
@@ -107,8 +111,22 @@ section div figure figcaption{
 }
 
 /******************************************************** EFFECTS ****************************************************/
+h1{transition: 1s ease-in-out;}
 h1:hover{
-    font-size: 5em;
     text-shadow: 0 0 10px #FF0000;
-    transition: 1s;
+    transition: 1s ease-in-out;
+}
+
+.mark{transition: 500ms;}
+.mark:hover{
+    text-shadow: 0 0 30px #0000FF;
+    transition: 500ms;
+}
+
+figure img{transition: 300ms;}
+figure img:hover{
+    box-shadow: 0 0 30px #0000FF;
+    transition: 100ms;
+
+    transform: scale(1.5) rotate(20deg);
 }
