--- a/css/default.css
+++ b/css/default.css
@@ -31,15 +31,15 @@ body{
 
 header{
     /*background: rgba(80,180,100,0.5);*/
-    height: 40%;
+    height: 55%;
     padding-top: 7%;
 
 }
 
 section{
     /*background: rgba(180,80,100,0.5);*/
-    height: 50%;
-    padding: 8%;
+    height: 35%;
+    width: 100%;
 }
 
 footer{
@@ -75,18 +75,19 @@ h3{
 }
 
 section div{
-    /*background: rgba(100,150,200, 0.5);*/
-    height: 30%;
-    width: 60%;
+    background: rgba(100,150,200, 0.5);
+    height: 20%;
+    width: 100%;
     min-width: 600px;
     margin: 20px auto 40px auto;
 }
 
 section div figure{
+    background: rgba(150,200,250, 0.5);
     height: 100%;
-    width: 10%;
-    margin: 0 0.5%;
-
+    /*width: px;*/
+    margin: 0px 1%;
+    padding: 0px;
     display: inline-block;
 }
 
@@ -126,7 +127,7 @@ h1:hover{
 figure img{transition: 300ms;}
 figure img:hover{
     box-shadow: 0 0 30px #0000FF;
-    transition: 100ms;
+    transition: 500ms;
 
-    transform: scale(1.5) rotate(20deg);
+    transform: scale(1.5) rotate(360deg);
 }
