--- a/css/default.css
+++ b/css/default.css
@@ -1,55 +1,3 @@
-html, body, header, nav, section, aside, footer{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-h1, h2, h3, p{
-    margin: 0;
-    padding: 0;
-
-    color: #FFF;
-    cursor: default;
-}
-
-html, body{
-    width: 100%;
-    min-width: 800px;
-    height: 100%;
-    min-height: 600px;
-    max-height: 100%;
-}
-
-html{
-    background: #000;
-}
-
-body{
-    background: url("../res/img/bg3.jpg") center;
-    background-size: cover;
-    text-align: center;
-}
-
-header{
-    /*background: rgba(80,180,100,0.5);*/
-    height: 55%;
-    padding-top: 7%;
-
-}
-
-section{
-    /*background: rgba(180,80,100,0.5);*/
-    height: 35%;
-    width: 100%;
-}
-
-footer{
-    /*background: rgba(100,180,80,0.5);*/
-    height: 10%;
-}
-
-/*********************************************************************************************************************/
-
 h1{
     margin: 0 auto;
     text-shadow: 0 0 5px #FF0000;
@@ -85,7 +33,8 @@ section div figure{
 
 section div figure img{
     height: 100%;
-    box-shadow: 0 0 5px #00FF00;
+    filter: drop-shadow(0px 0px 3px #00FF00);
+    -webkit-filter: drop-shadow(0px 0px 3px #00FF00);
 }
 
 section div figure figcaption{
@@ -107,7 +56,8 @@ h1:hover{
 
 figure img{transition: 300ms;}
 figure img:hover{
-    box-shadow: 0 0 30px #0000FF;
+    filter: drop-shadow(0px 0px 3px #0000FF);
+    -webkit-filter: drop-shadow(0px 0px 3px #0000FF);
     transition: 500ms;
 
     transform: scale(1.5) rotate(360deg);
@@ -119,6 +69,70 @@ footer div, footer div span{
     padding: 0px;
 }
 
+div#contactContainer{
+    position: fixed;
+    height: 21vh; min-height: 15vh;
+    width: 10vw; min-width: 60px;
+
+    z-index: 1;
+    bottom: -16vh;
+    right: 50px;
+
+    border-radius: 20px 20px 0px 0px;
+    background: #FFF;
+    box-shadow: 0 0 10px #0000FF;
+    transition: 1s ease-in-out;
+    cursor: default;
+}
+
+div#contactContainer:hover{
+    background: #d8fcff;
+    bottom: 0px;
+    /*transform: rotate(5deg);*/
+
+    box-shadow: 0 0 10px #FF0000;
+    transition: 500ms ease-in-out;
+}
+
+div.contOpt{
+    display: flex;
+    min-height: 25%;
+    width: 100%;
+
+    text-align: center;
+    justify-align: center;
+    align-items: center;
+}
+
+div.contOpt:nth-child(1){
+    border-radius: 20px 20px 0px 0px;
+}
+
+div.contOpt:hover{background: #FFF;}
+
+div.contOpt a{
+    display: block;
+    width: 100%;
+}
+
+div.contOpt img{
+    display: inline-block;
+    height: 3vh;
+    margin-right: 1vh;
+    margin-left: 1vh;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+/*
+div#contact img{
+    height: 30px;
+    margin-right: 5px;
+}
+
 div.hide{
     bottom: -50px;
 }
@@ -128,36 +142,7 @@ div.hide:hover{
     text-shadow: 0 0 10px #FF0000;
 }
 
-div#contact{
-    border-radius: 20px 20px 0px 0px;
-    background: #FFF;
-    height: 400px;
-    width: 150px;
-    z-index: 1;
-    bottom: -360px;
-    right: 50px;
-    position: fixed;
-
-    box-shadow: 0 0 10px #0000FF;
-    transition: 1s ease-in-out;
-
-    cursor: default;
-}
-
-div#contact:hover{
-    background: #d8fcff;
-    bottom: -50px;
-    transform: rotate(5deg);
-
-    box-shadow: 0 0 10px #FF0000;
-    transition: 500ms ease-in-out;
-}
-
 div.hide:hover{
     display:block;
 }
-
-div#contact img{
-    height: 30px;
-    margin-right: 5px;
-}
+*/
