--- a/css/desktop.css
+++ b/css/desktop.css
@@ -4,27 +4,17 @@ html, body, header, nav, section, aside, footer{
     padding: 0;
 }
 
-h1, h2, h3, p{
-    margin: 0;
-    padding: 0;
-
-    color: #FFF;
-    cursor: default;
-}
-
-html, body{
-    width: 100%;
-    min-width: 800px;
-    height: 100%;
-    min-height: 600px;
-    max-height: 100%;
-}
-
 html{
-    background: #000;
+    width: 100%;  min-width: 800px;
+    height: 100%;  min-height: 600px;
+
+    background: #FFF;
 }
 
 body{
+    width: 100%;  min-width: 800px;
+    height: 100%;  min-height: 600px;
+
     background: url("../res/img/bg3.jpg") center;
     background-size: cover;
     text-align: center;
@@ -46,4 +36,12 @@ section{
 footer{
     /*background: rgba(100,180,80,0.5);*/
     height: 10%;
+}
+
+h1, h2, h3, p{
+    margin: 0;
+    padding: 0;
+
+    color: #FFF;
+    cursor: default;
 }
