--- a/css/desktop.css
+++ b/css/desktop.css
@@ -45,3 +45,132 @@ h1, h2, h3, p{
     color: #FFF;
     cursor: default;
 }
+
+h1{
+    margin: 0 auto;
+    text-shadow: 0 0 5px #FF0000;
+    transition: 1s;
+    display: inline-block;
+    cursor: default;
+}
+
+h2{
+    text-shadow: 0 0 5px #00FF00;
+}
+
+h3{
+    text-shadow: 0 0 5px #0000FF;
+}
+
+section div{
+    /*background: rgba(100,150,200, 0.5);*/
+    height: 20%;
+    width: 100%;
+    min-width: 600px;
+    margin: 20px auto 40px auto;
+}
+
+section div figure{
+    /*background: rgba(150,200,250, 0.5);*/
+    height: 100%;
+    /*width: px;*/
+    margin: 0px 1%;
+    padding: 0px;
+    display: inline-block;
+}
+
+section div figure img{
+    height: 100%;
+    filter: drop-shadow(0px 0px 3px #00FF00);
+    -webkit-filter: drop-shadow(0px 0px 3px #00FF00);
+}
+
+section div figure figcaption{
+    opacity: 0;
+}
+
+/******************************************************** EFFECTS ****************************************************/
+h1{transition: 1s ease-in-out;}
+h1:hover{
+    text-shadow: 0 0 10px #FF0000;
+    transition: 1s ease-in-out;
+}
+
+.mark{transition: 500ms;}
+.mark:hover{
+    text-shadow: 0 0 30px #0000FF;
+    transition: 500ms;
+}
+
+figure img{transition: 300ms;}
+figure img:hover{
+    filter: drop-shadow(0px 0px 3px #0000FF);
+    -webkit-filter: drop-shadow(0px 0px 3px #0000FF);
+    transition: 500ms;
+
+    transform: scale(1.5) rotate(360deg);
+}
+
+/******************************************************* BARS ********************************************************/
+footer div, footer div span{
+    margin: 0px;
+    padding: 0px;
+}
+
+div#contactContainer{
+    position: fixed;
+    height: 21vh; min-height: 15vh;
+    width: 10vw; min-width: 60px;
+
+    z-index: 1;
+    bottom: -16vh;
+    right: 50px;
+
+    border-radius: 20px 20px 0px 0px;
+    background: #FFF;
+    box-shadow: 0 0 10px #0000FF;
+    transition: 1s ease-in-out;
+    cursor: default;
+}
+
+div#contactContainer:hover{
+    background: #d8fcff;
+    bottom: 0px;
+    /*transform: rotate(5deg);*/
+
+    box-shadow: 0 0 10px #FF0000;
+    transition: 500ms ease-in-out;
+}
+
+div.contOpt{
+    display: flex;
+    min-height: 25%;
+    width: 100%;
+
+    text-align: center;
+    justify-align: center;
+    align-items: center;
+}
+
+div.contOpt:nth-child(1){
+    border-radius: 20px 20px 0px 0px;
+}
+
+div.contOpt:hover{background: #FFF;}
+
+div.contOpt a{
+    display: block;
+    width: 100%;
+}
+
+div.contOpt img{
+    display: inline-block;
+    height: 3vh;
+    margin-right: 1vh;
+    margin-left: 1vh;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
