--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,25 +5,24 @@ html, body, header, nav, section, aside, footer{
 }
 
 html{
-    width: 100%;  min-width: 800px;
-    height: 100%;  min-height: 600px;
-
     background: #FFF;
 }
 
 body{
-    width: 100%;  min-width: 800px;
-    height: 100%;  min-height: 600px;
-
-    background: url("../res/img/bg3.jpg") center;
-    background-size: cover;
+    background: url("../res/img/bg3_rot.jpg") no-repeat center center fixed;
     text-align: center;
 }
 
-header{
-    height: 30vh;
+footer{
+    display:none;
 }
 
-section{
-    height: 60vh;
+h1, h2, h3, p{
+    margin: 0;
+    padding: 0;
+    color: #FFF;
+}
+
+header h2{
+    display: none;
 }
